# gfx

./: .gitignore  .markdownlint.yml  Cargo.toml  README.md  build.rs  debug-notes.md  notes.md  notes.txt
check-shaders/: Cargo.toml
check-shaders/src/: main.rs
data/: ambient_light.ron.rsf  directional_light.ron.rsf  lights.ron.rsf  spot_light.ron.rsf  test.rrf.ron
dbg/: Cargo.toml
dbg/src/: main.rs
editor/: Cargo.toml
editor/src/: main.rs
gltf-viewer/: Cargo.toml
gltf-viewer/src/: main.rs
ram/: Cargo.toml  build.rs
ram-derive/: Cargo.toml
ram-derive/src/: component.rs  visit.rs
ram/src/: camera.rs  common.rs  ecs.rs  graph.rs  lib.rs  macros.rs  math.rs  recipe.rs  time.rs  visit.rs
ram/src/asset/: gltf.rs  mod.rs  rsf.rs
ram/src/io/: event.rs  mod.rs
ram/src/io/input/: input_context.rs  mod.rs
ram/src/render/: geometry.rs  imgui.rs  light.rs  material.rs  mesh.rs  mod.rs  shader.rs  uniform.rs
ram/src/render/debug/: bounding_box.rs  camera.rs  imdbg.rs  light.rs  mod.rs  window.rs
ram/src/render/pipeline/: mod.rs  shader_service.rs
ram/src/render/shader/: compiler.rs  mod.rs  service.rs
ram/src/render/shaderlib/include/: engine.frag.glsl  engine.vert.glsl
ram/src/render/shaders/: uniform_color_frag.glsl
ram/src/render/shaders/imgui/: frag.glsl
ram/src/render/shaders/include/: engine.vert.glsl
ram/src/render/shaders/pbr/: frag.glsl  vert.glsl
ram/src/render/shaders/shadow/: depth_write_vert.glsl  pointlight_frag.glsl  pointlight_vert.glsl
ram/src/render/shaders/unlit/: frag.glsl  vert.glsl
ram/src/ui/: inspector.rs  mod.rs
ramneryd/: Cargo.toml  build.rs
ramneryd-derive/: Cargo.toml
ramneryd-derive/src/: component.rs  inspect.rs  lib.rs
ramneryd/src/: camera.rs  common.rs  ecs.rs  game_state.rs  graph.rs  lib.rs  macros.rs  math.rs  profile.rs  visit.rs
ramneryd/src/asset/: gltf.rs  mod.rs  rsf.rs
ramneryd/src/editor/: inspect.rs  inspector.rs  mod.rs
ramneryd/src/io/: event.rs  mod.rs
ramneryd/src/io/input/: input_context.rs  mod.rs
ramneryd/src/render/: bounding_box.rs  debug_window.rs  geometry.rs  imgui.rs  light.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  shader.rs  ui.rs  uniform.rs
ramneryd/src/render/debug/: bounding_box.rs  camera.rs  camera_frustum.rs  light.rs  mod.rs  window.rs
ramneryd/src/render/shaderlib/include/: engine.frag.glsl  engine.vert.glsl
ramneryd/src/render/shaderlib/include/engine/: vert.glsl
ramneryd/src/render/shaders/: pos_only_vert.glsl  push_constant_color_frag.glsl  world_pos_only_vert.glsl
ramneryd/src/render/shaders/imgui/: vert.glsl
ramneryd/src/render/shaders/pbr/: frag.glsl  vert.glsl
ramneryd/src/render/shaders/unlit/: frag.glsl  vert.glsl
ramneryd/src/ui/: inspector.rs  mod.rs
resurs/: Cargo.toml
resurs/benches/: storage.rs
resurs/src/: async_storage.rs  buffered_storage.rs  cache.rs  cached_storage.rs  lib.rs  storage.rs
src/: arg_parse.rs  asset.rs  camera.rs  common.rs  ecs.rs  editor.rs  game_state.rs  graph.rs  input.rs  main.rs  math.rs  render.rs  settings.rs  time.rs  transform_graph.rs  world.rs
src/asset/: cache.rs  gltf.rs  mod.rs  obj.rs  storage.rs
src/common/: material.rs  math.rs  mod.rs  render_graph.rs  time.rs
src/editor/: inspect.rs  mod.rs
src/input/: input_context.rs  mod.rs
src/io/: event.rs  mod.rs  windowing.rs
src/render/: bounding_box.rs  debug_window.rs  geometry.rs  light.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  ui.rs  (+3 more)
trekant/: Cargo.toml
trekant-derive/: Cargo.toml
trekant/examples/: vulkan-tutorial-threaded.rs  vulkan-tutorial.rs
trekant/examples/shaders/: shader.frag.glsl  shader.vert.glsl  vulkan-tutorial.frag.glsl  vulkan-tutorial.vert.glsl
trekant/src/: descriptor.rs  error.rs  generics.rs  lib.rs  loader.rs  pipeline_resource.rs  render_pass.rs  render_target.rs  resource.rs  std140.rs  texture.rs  traits.rs  vertex.rs
trekant/src/backend/: mod.rs
trekant/src/backend/vk/: buffer.rs  command.rs  framebuffer.rs  image.rs  mod.rs  queue.rs  surface.rs  swapchain.rs  util.rs  validation_layers.rs
trekant/src/backend/vk/device/: error.rs  mod.rs
trekant/src/backend/vk/instance/: error.rs
trekant/src/buffer/: buffer_storage.rs  descriptor.rs  mod.rs  notes.rst
trekant/src/pipeline/: error.rs  mod.rs  spirv.rs
trekant/src/util/: format.rs  mod.rs  offset.rs
trekant/tests/: test-derive-macro.rs
trekanten/: Cargo.toml  build.rs
trekanten-derive/: Cargo.toml
trekanten/examples/: main.rs  threaded.rs  vulkan-tutorial-threaded.rs  vulkan-tutorial.rs
trekanten/scripts/: compile_shaders.ps1  compile_shaders.sh
trekanten/src/: color_buffer.rs  command.rs  common.rs  depth_buffer.rs  descriptor.rs  draw_list.rs  error.rs  framebuffer.rs  image.rs  lib.rs  loader.rs  material.rs  mem.rs  mesh.rs  queue.rs  render_pass.rs  resource.rs  spirv.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  traits.rs  uniform.rs  vertex.rs  window.rs
trekanten/src/backend/: mod.rs
trekanten/src/backend/vk/: buffer.rs  color_buffer.rs  command.rs  depth_buffer.rs  framebuffer.rs  image.rs  mod.rs  queue.rs  render_pass.rs  surface.rs  swapchain.rs  sync.rs  util.rs  validation_layers.rs
trekanten/src/backend/vk/device/: device_selection.rs  error.rs  mod.rs
trekanten/src/backend/vk/instance/: mod.rs
trekanten/src/buffer/: buffer_storage.rs  descriptor.rs  mod.rs  notes.rst
trekanten/src/device/: mod.rs
trekanten/src/instance/: error.rs  mod.rs
trekanten/src/mem/: buffer.rs  buffer_storage.rs  image.rs  mod.rs
trekanten/src/pipeline/: error.rs  generated.rs  mod.rs  spirv.rs
trekanten/src/pipeline/shaders/: frag.spv  pbr_gltf_frag.glsl  pbr_gltf_vert.glsl  vert.spv
trekanten/src/resource/: async_storage.rs  buffered_storage.rs  cache.rs  cached_storage.rs  mod.rs  storage.rs
trekanten/src/util/: extent.rs  ffi.rs  format.rs  lifetime.rs  mod.rs  offset.rs  rect.rs  viewport.rs  vk_debug.rs
trekanten/tests/: test-derive-macro.rs
vxl/: Cargo.toml  notes.txt
vxl/src/: lib.rs  main.rs  meshing.rs  procgen.rs  render.rs  voxel.rs
vxl/src/shaders/: frag.glsl  vert.glsl
(+9 files in other folders)
