[package]
name = "ramneryd"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = ["trekanten" ]

[dependencies]
# ECS
specs-hierarchy = "0.6.0"
specs = { version = "0.16.1", features = ["specs-derive"] }

# Rendering/Graphics
winit = "0.22.2"
trekanten = {path = "trekanten" }
imgui = "0.5.0"
shaderc = "0.6.2"

# Math/Physics
vek = "0.12.0"
num-derive = "0.2.5"
num-traits = "0.2.8"

# Resources/Assets
gltf = "0.14.0"

# Util
log = "0.4.8"
env_logger = "0.6.2"
clap = "2.33.0"
thiserror = "1.0.20"

# Threading
crossbeam = "0.7.3"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.trekanten]
opt-level = 0
