[package]
name = "check-shaders"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2021"

[dependencies]
ram = { path = "../ram", features = ["validation-layers"] }
clap = { version = "3.1.0", features = ["derive"] }

[features]
profile = ["ram/profile-with-tracy"]
