[package]
name = "trekant"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2021"

[dependencies]
ash = "0.37.3"
spirv-reflect = "0.2.3"
vma = "0.3.0"
# vk-mem = "0.2.2"
# vk-mem = { git = "https://github.com/NiklasJonsson/vk-mem-rs", branch = "master" }

# Windowing
ash-window = "0.12.0"
raw-window-handle = "0.5.2"

# Util
log = "0.4.8"
env_logger = "0.7.1"
image = "0.23.8"
thiserror = "1.0.20"
derive_builder = "0.10.2"
num-traits = "0.2.14"
resurs = { path = "../resurs" }
parking_lot = "0.11.1"
bitflags = "1.2"
trekant-derive = { path = "../trekant-derive" }

profiling = "1.0.3"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
validation-layers = []

[dev-dependencies]
inline-spirv = "0.1.1"
reqwest = { version = "0.10.7", features = ["blocking"] }
tobj = "2.0.2"
winit = "0.28.6"
nalgebra-glm = "0.7.0"
