[package]
name = "trekanten"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Graphics
ash = "0.31.0"
spirv-reflect = "0.2.3"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", rev = "a65fbe6c1cb0df5f8f75877ccc081867e81e7f9c" }

# Windowing
ash-window = "0.4.1"
raw-window-handle = "0.3.3"

# Util
log = "0.4.8"
env_logger = "0.7.1"
image = "0.23.8"
thiserror = "1.0.20"
derive_builder = "0.9.0"
num-traits = "0.2.14"
static_assertions = "1.1.0"
resurs = { path = "../resurs" }
parking_lot = "0.11.1"
arrayvec = "0.5"

profiling = "0.1.7"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dev-dependencies]
inline-spirv = "0.1.1"
reqwest = {version = "0.10.7", features = ["blocking"]}
tobj = "2.0.2"
glfw = {version = "0.39.0", features = ["vulkan"]}
nalgebra-glm = "0.7.0"
