[package]
name = "trekanten"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2021"

[dependencies]
# Graphics
ash = "0.31.0"
spirv-reflect = "0.2.3"
vk-mem = { git = "https://github.com/NiklasJonsson/vk-mem-rs", branch = "master" }

# Windowing
ash-window = "0.4.1"
raw-window-handle = "0.3.3"

# Util
log = "0.4.8"
env_logger = "0.7.1"
image = "0.23.8"
thiserror = "1.0.20"
derive_builder = "0.10.2"
num-traits = "0.2.14"
static_assertions = "1.1.0"
resurs = { path = "../resurs" }
parking_lot = "0.11.1"
arrayvec = "0.5"
bitflags = "1.2"
trekanten-derive = { path = "../trekanten-derive" }

profiling = "1.0.3"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
validation-layers = []

[dev-dependencies]
inline-spirv = "0.1.1"
reqwest = {version = "0.10.7", features = ["blocking"]}
tobj = "2.0.2"
glfw = {version = "0.39.0", features = ["vulkan"]}
nalgebra-glm = "0.7.0"

